# divide-and-cover

./: .dockerignore  .gitignore  Dockerfile  MODAL.md  Makefile  POLLING.md  README.md  docker-compose-dev.yml  docker-compose.yml  modal_app.py  pyproject.toml
app/: main.py
app/static/: app.js  index.html
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  format.ts  pitchShift.ts  player.ts  state.svelte.ts
frontend/src/lib/actions/: lockScroll.ts  swipeDown.ts
frontend/src/lib/components/: DropZone.svelte  Library.svelte  Lyrics.svelte  LyricsSearch.svelte  PitchDialog.svelte  Player.svelte  ProgressView.svelte  StemControls.svelte  ThemeToggle.svelte  YouTubeSearch.svelte
frontend/src/routes/: +layout.ts  +page.svelte
scripts/: install-tunnel-service.sh
